--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Another Website</title>
+        <link rel="stylesheet" href="style.css"/>
+         <title>Another Website</title>
     </head>
     <body>
-        <h1>Just Another Website</h1>
+        <h1><em>Oh...</em> So Empty</h1>
     </body>
 </html>
